<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <artifactId>apm-agent-plugins</artifactId>
        <groupId>co.elastic.apm</groupId>
        <version>1.37.1-SNAPSHOT</version>
    </parent>

    <artifactId>apm-javalin-plugin</artifactId>
    <name>${project.groupId}:${project.artifactId}</name>

    <properties>
        <apm-agent-parent.base.dir>${project.basedir}/../..</apm-agent-parent.base.dir>

        <!-- Javalin is compiled for Java 8 -->
        <maven.compiler.target>8</maven.compiler.target>
        <maven.compiler.source>${maven.compiler.target}</maven.compiler.source>
        <animal.sniffer.skip>true</animal.sniffer.skip>

        <javalin.version>4.2.0</javalin.version>
        <!-- this has to override the global jetty dependency, and needs to match the javalin version -->
        <jetty.version>9.4.44.v20210927</jetty.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.javalin</groupId>
            <artifactId>javalin</artifactId>
            <version>${javalin.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-webapp</artifactId>
            <version>${jetty.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-servlet</artifactId>
            <version>${jetty.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>apm-servlet-plugin</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <!-- Javalin initialization requires preview features -->
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
